<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="play_again">Play Again</string>
    <string name="image_1">Image 1</string>
    <string name="image_2">Image 2</string>
    <string name="image_3">Image 3</string>
    <string name="image_4">Image 4</string>
    <string name="image_5">Image 5</string>
    <string name="image_6">Image 6</string>
    <string name="image_7">Image 7</string>
    <string name="image_8">Image 8</string>
    <string name="image_9">Image 9</string>
</resources>
