<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:columnCount="3"
        android:rowCount="3"
        android:background="@drawable/board"
        android:id="@+id/gridLayout">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="dropIn"
            android:tag="0"
            android:layout_marginStart="23dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/image_1" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageView2"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:onClick="dropIn"
            android:tag="1"
            android:layout_marginStart="40dp"
            android:contentDescription="@string/image_2" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageView3"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="45dp"
            android:onClick="dropIn"
            android:tag="2"
            android:layout_marginStart="45dp"
            android:contentDescription="@string/image_3"/>

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageView4"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="24dp"
            android:onClick="dropIn"
            android:tag="3"
            android:layout_marginStart="25dp"
            android:contentDescription="@string/image_4"/>

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageView5"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="24dp"
            android:onClick="dropIn"
            android:tag="4"
            android:layout_marginStart="40dp"
            android:contentDescription="@string/image_5"/>

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageView6"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="24dp"
            android:onClick="dropIn"
            android:tag="5"
            android:layout_marginStart="45dp"
            android:contentDescription="@string/image_6"/>

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageView7"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"
            android:onClick="dropIn"
            android:tag="6"
            android:layout_marginStart="25dp"
            android:contentDescription="@string/image_7"/>

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageView8"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="30dp"
            android:onClick="dropIn"
            android:tag="7"
            android:layout_marginStart="35dp"
            android:contentDescription="@string/image_8"/>

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageView9"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="30dp"
            android:onClick="dropIn"
            android:tag="8"
            android:layout_marginStart="45dp"
            android:contentDescription="@string/image_9"/>

    </GridLayout>

    <LinearLayout
        android:id="@+id/playAgainLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/holo_blue_dark"
        android:orientation="vertical"
        android:padding="30dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/winnerMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="New Text"
            android:textSize="30sp" />

        <Button
            android:id="@+id/playAgainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="playAgain"
            android:text="@string/play_again" />
    </LinearLayout>
</RelativeLayout>
